# Email-Workflow-Automation-using-Agentic-AI

./: README.md
Email-Workflow-Automation-main/: .gitignore  get_refresh_token.py  pyproject.toml  requirements.txt
Email-Workflow-Automation-main/src/agent/: clickup_agent.py  db_operations_agent.py  email_parser_agent.py  main.py
Email-Workflow-Automation-main/src/agent/tools/: db_ops_tool.py  email_ops.py
__MACOSX/Email-Workflow-Automation-main/src/agent/tools/: ._email_ops.py
