[project]
name = "agent"
version = "0.1.0"
description = "Email Workflow Automation Agent"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = []

[project.scripts]
agent = "agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
